fixed sticky hover on mobile

--- a/renderer/scss/layout/_footer.scss
+++ b/renderer/scss/layout/_footer.scss
@@ -21,8 +21,10 @@ footer {
       transition: background-color 0.3s ease-in-out;
       width: fit-content;
 
-      &:hover {
-        background-color: var(--contact-link-bg);
+      @media (hover: hover) {
+        &:hover {
+          background-color: var(--contact-link-bg);
+        }
       }
     }
   }
